# old-metronome

./: .gitignore  .gitignore.swp  19.rec  Actions.hs  Algorythm.hs  Binary.hs  Clusters.hs  Control.hs  Coo.hs  Corr.hs  CorrMain.hs  Create.hs  Cursor.hs  Cursor2.hs  Cursor3.hs  Feeling.hs  Gtk.hs  GtkDouble.hs  Language.hs  Main.hs  Main2.hs  Metronome.hs  Monad.hs  OpDouble.hs  P.hs  Parser.hs  Pezzo.txt  README.md  Rythmics.hs  Schedule.hs  Sequences.hs  Sliding.hs  Supercollider.hs  Supercollider2.hs  Supercollider3.hs  Supercollider4.hs  Track.hs  Types.hs  cursors.hs  metronome.cabal  (+2 more)
Control/Concurrent/: STMOrIO.hs
System/: Metronome.hs  Metronome2.hs
System/Metronome/: Practical.hs  Shortcuts.hs
