Name:              metronome
Version:           0.1
Synopsis:          Time Synchronized execution.
Description:       Objects useful to execute actions at regular intervals
License:           BSD3
Category:          System
Copyright:         (c) Paolo Veonelli, 2012
Author:            Paolo Veronelli
Maintainer:        paolo.veronelli@gmail.com
Stability:         Experimental
Homepage:          
Tested-With:       GHC == 7.4.2
Build-Type:        Simple
Cabal-Version:     >= 1.8


Library
  Build-Depends:   base == 4.*,
                   hosc,
                   stm >= 2.4

  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: System.Metronome
  Other-modules:   

source-repository head
  type:             git
  location:         git://github.com/paolino/metronome.git

