Name:              metronome
Version:           0.1
Synopsis:          Time Synchronized execution.
Description:       Objects useful to execute actions at regular intervals
License:           BSD3
License-file:      LICENSE
Category:          System
Copyright:         (c) Paolo Veonelli, 2012
Author:            Paolo Veronelli
Maintainer:        paolo.veronelli@gmail.com
Stability:         Experimental
Homepage:          
Tested-With:       GHC == 7.4.1
Build-Type:        Simple
Cabal-Version:     >= 1.8


Library
  Build-Depends:   base == 4.*,
                   hosc >= 0.11,
                   stm >= 2.4,
                   data-lens,
                   data-lens-template

  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: System.Metronome, Control.Concurrent.STMOrIO
  Other-modules:   

source-repository head
  type:             git
  location:         git://github.com/paolino/metronome.git

